--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -11,9 +14,11 @@
     "history": "^5.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-visibility-sensor": "^5.1.1",
     "sass": "^1.42.1",
     "swiper": "^6.3.5",
     "web-vitals": "^1.1.2",
